[gd_scene load_steps=33 format=3 uid="uid://bo1lqd22ai3kg"]

[ext_resource type="Texture2D" uid="uid://dmxywrp1usmrg" path="res://Assets/SpritesPrincipais/Background.jpg" id="1_f22hs"]
[ext_resource type="Script" path="res://Scripts/Logica/GameController.gd" id="1_tamjx"]
[ext_resource type="Texture2D" uid="uid://q56a3pr5rlpp" path="res://Assets/SpritesPrincipais/Telao.png" id="2_o8201"]
[ext_resource type="Texture2D" uid="uid://d0wqbdwvgeg2l" path="res://Assets/SpritesPrincipais/Icones/DefesaCivil.png" id="3_2ibad"]
[ext_resource type="Script" path="res://Scripts/Logica/Recursos.gd" id="4_4area"]
[ext_resource type="Texture2D" uid="uid://cgb1lpj6ybrl2" path="res://Assets/SpritesPrincipais/Icones/Comlurb.png" id="4_b0cec"]
[ext_resource type="Texture2D" uid="uid://bycer6w1hu7la" path="res://Assets/SpritesPrincipais/Icones/SAMU.png" id="5_d1a3r"]
[ext_resource type="Texture2D" uid="uid://dyn06v801ya4c" path="res://Assets/SpritesPrincipais/Icones/Bombeiro.png" id="6_ga0v1"]
[ext_resource type="Texture2D" uid="uid://dij3me27ja51a" path="res://Assets/SpritesPrincipais/Icones/PoliciaMilitar.png" id="7_hmc2f"]
[ext_resource type="Texture2D" uid="uid://bwen7vpkv34dp" path="res://Assets/SpritesPrincipais/Icones/AlertaRio.png" id="8_55fxb"]
[ext_resource type="Texture2D" uid="uid://cnh4g075uy4h8" path="res://Assets/SpritesPrincipais/Icones/GeoRio.png" id="9_u2fx4"]
[ext_resource type="Texture2D" uid="uid://db8qqkpg3wdhl" path="res://Assets/SpritesPrincipais/Icones/RioLuz.png" id="10_rnwhg"]
[ext_resource type="Texture2D" uid="uid://cc62vfc4nfno5" path="res://Assets/SpritesPrincipais/Icones/RioAguas.png" id="11_63on3"]
[ext_resource type="Texture2D" uid="uid://csyrnddrgehvx" path="res://Assets/SpritesPrincipais/Icones/CetRio.png" id="12_4nook"]
[ext_resource type="Texture2D" uid="uid://mq0225hhh7hw" path="res://Assets/SpritesPrincipais/Icones/Conservacao.png" id="13_8m6ct"]
[ext_resource type="Texture2D" uid="uid://dqwmnpbjbpek5" path="res://Assets/SpritesPrincipais/Mesa.png" id="14_s6u07"]
[ext_resource type="Script" path="res://Scripts/Logica/MonitorImagem.gd" id="16_87xql"]
[ext_resource type="Script" path="res://Scripts/Logica/OcorrenciasFeliz.gd" id="16_qdsup"]
[ext_resource type="Texture2D" uid="uid://bluc56pxhhii1" path="res://Assets/SpritesPrincipais/Indicadores.png" id="17_a0ssq"]
[ext_resource type="Texture2D" uid="uid://p77uko42grrj" path="res://Assets/SpritesPrincipais/IconMedidores.png" id="18_7e1eo"]
[ext_resource type="Script" path="res://Scripts/Logica/Medidores.gd" id="19_4agvb"]
[ext_resource type="Script" path="res://Scripts/Logica/estagio.gd" id="22_86vf3"]
[ext_resource type="Texture2D" uid="uid://cnipxe3hv3man" path="res://Assets/SpritesPrincipais/Relogio.png" id="23_3gnvd"]
[ext_resource type="Script" path="res://Scripts/Logica/Relogio.gd" id="24_ewala"]
[ext_resource type="AudioStream" uid="uid://c7mj80hhhti6l" path="res://Assets/SFX/Bgm.mp3" id="25_ug42m"]

[sub_resource type="LabelSettings" id="LabelSettings_fhghj"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7qrc"]
bg_color = Color(0.309702, 0.426264, 0.586519, 1)

[sub_resource type="LabelSettings" id="LabelSettings_taai3"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_tdjbx"]
font_size = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dk4hj"]
bg_color = Color(0.619608, 0.0823529, 0.0823529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7lrg"]
bg_color = Color(0.0862745, 0.337255, 0.564706, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p8330"]
font_size = 68

[node name="Principal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_tamjx")

[node name="TempoJogo" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="Fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_f22hs")
expand_mode = 1

[node name="Recursos" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 534.0
offset_bottom = 880.0
texture = ExtResource("2_o8201")
expand_mode = 1
script = ExtResource("4_4area")

[node name="Orgaos" type="Control" parent="Recursos"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Recursos/Orgaos"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -210.0
offset_top = 53.0
offset_right = 210.0
offset_bottom = 683.0
grow_horizontal = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 50
columns = 3

[node name="DefesaCivil" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2ibad")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/DefesaCivil"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "DEFESA CIVIL"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="Comlurb" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("4_b0cec")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/Comlurb"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "COMLURB"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="Samu" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("5_d1a3r")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/Samu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "SAMU"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="Bombeiro" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("6_ga0v1")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/Bombeiro"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "BOMBEIRO"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="PoliciaMilitar" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("7_hmc2f")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/PoliciaMilitar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "PM"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="AlertaRio" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("8_55fxb")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/AlertaRio"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "ALERTA RIO"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="GeoRio" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("9_u2fx4")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/GeoRio"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "GEO-RIO"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="RioLuz" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("10_rnwhg")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/RioLuz"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "RIOLUZ"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="RioAguas" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("11_63on3")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/RioAguas"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "RIO-√ÅGUAS"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="CetRio" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("12_4nook")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/CetRio"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "CET-RIO"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="Conservacao" type="TextureButton" parent="Recursos/Orgaos/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("13_8m6ct")

[node name="Label" type="Label" parent="Recursos/Orgaos/GridContainer/Conservacao"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 0
text = "CONSERVA√á√ÉO"
label_settings = SubResource("LabelSettings_fhghj")
horizontal_alignment = 1

[node name="Enviar" type="Button" parent="Recursos/Orgaos"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -130.0
offset_right = 93.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "ENVIAR"

[node name="Mesa" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -915.0
offset_top = -718.0
offset_right = 915.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("14_s6u07")
expand_mode = 1

[node name="MonitorL" type="TextureButton" parent="Mesa"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -639.0
offset_top = -330.0
offset_right = -35.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("16_87xql")

[node name="MonitorR" type="Panel" parent="Mesa"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -330.0
offset_right = 639.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x7qrc")

[node name="Nome" type="Label" parent="Mesa/MonitorR"]
layout_mode = 0
offset_left = 22.0
offset_top = 12.0
offset_right = 580.0
offset_bottom = 85.0
label_settings = SubResource("LabelSettings_taai3")
vertical_alignment = 1
autowrap_mode = 3

[node name="Desc" type="Label" parent="Mesa/MonitorR"]
layout_mode = 0
offset_left = 22.0
offset_top = 98.0
offset_right = 582.0
offset_bottom = 403.0
label_settings = SubResource("LabelSettings_tdjbx")
autowrap_mode = 3

[node name="Ocorrencias" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -534.0
offset_bottom = 880.0
grow_horizontal = 0
pivot_offset = Vector2(534, 0)
texture = ExtResource("2_o8201")
expand_mode = 1
script = ExtResource("16_qdsup")
intervalo_min = 15.0
intervalo_max = 30.0

[node name="VBoxContainer" type="VBoxContainer" parent="Ocorrencias"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -407.0
offset_right = 238.0
offset_bottom = 401.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Timer" type="Timer" parent="Ocorrencias"]
autostart = true

[node name="Indicadores" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -546.0
offset_right = 546.0
offset_bottom = 336.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("17_a0ssq")
expand_mode = 1

[node name="Medidores" type="ColorRect" parent="Indicadores" node_paths=PackedStringArray("calor_bar", "chuva_bar")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -121.0
offset_right = 517.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.236301, 0.512903, 0.524132, 1)
script = ExtResource("19_4agvb")
calor_bar = NodePath("VBoxContainer/IndicaCalor")
chuva_bar = NodePath("VBoxContainer/ProgressBar")

[node name="IconMedidores" type="TextureRect" parent="Indicadores/Medidores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -115.0
offset_right = 79.5
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.459394, 0.459394)
texture = ExtResource("18_7e1eo")

[node name="VBoxContainer" type="VBoxContainer" parent="Indicadores/Medidores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -119.0
offset_right = 201.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 75
alignment = 1

[node name="IndicaCalor" type="ProgressBar" parent="Indicadores/Medidores/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_dk4hj")
show_percentage = false

[node name="ProgressBar" type="ProgressBar" parent="Indicadores/Medidores/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_i7lrg")
show_percentage = false

[node name="Timer" type="Timer" parent="Indicadores/Medidores"]
wait_time = 60.0
autostart = true

[node name="Estagio" type="ColorRect" parent="Indicadores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -517.0
offset_top = -121.0
offset_right = -64.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.233832, 0.912893, 0.526725, 1)
script = ExtResource("22_86vf3")
color_1 = Color(0.235294, 0.913725, 0.52549, 1)
color_2 = Color(0.902551, 0.757172, 0.284067, 1)
color_3 = Color(0.897038, 0.504766, 0.25196, 1)
color_4 = Color(0.739292, 0.107172, 0.199573, 1)
color_5 = Color(0.331429, 0.0781024, 0.336558, 1)

[node name="estagio" type="Label" parent="Indicadores/Estagio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -119.0
offset_right = 105.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 61
text = "Est√°gio"
horizontal_alignment = 1

[node name="estagioNivel" type="Label" parent="Indicadores/Estagio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 140
text = "1"
horizontal_alignment = 1

[node name="Relogio" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -258.0
offset_top = -266.0
offset_right = 258.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("23_3gnvd")
expand_mode = 1
script = ExtResource("24_ewala")

[node name="Tempo" type="Label" parent="Relogio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -24.0
offset_right = 157.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00"
label_settings = SubResource("LabelSettings_p8330")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_ug42m")
autoplay = true
parameters/looping = false

[connection signal="timeout" from="TempoJogo" to="Indicadores/Estagio" method="_on_tempo_jogo_timeout"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/DefesaCivil" to="." method="_on_defesa_civil_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/Comlurb" to="." method="_on_comlurb_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/Samu" to="." method="_on_samu_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/Bombeiro" to="." method="_on_bombeiro_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/PoliciaMilitar" to="." method="_on_policia_militar_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/AlertaRio" to="." method="_on_alerta_rio_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/GeoRio" to="." method="_on_geo_rio_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/RioLuz" to="." method="_on_rio_luz_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/RioAguas" to="." method="_on_rio_aguas_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/CetRio" to="." method="_on_cet_rio_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/GridContainer/Conservacao" to="." method="_on_conservacao_pressed"]
[connection signal="pressed" from="Recursos/Orgaos/Enviar" to="." method="_on_enviar_pressed"]
[connection signal="timeout" from="Ocorrencias/Timer" to="Ocorrencias" method="_on_timer_timeout"]
[connection signal="timeout" from="Indicadores/Medidores/Timer" to="Indicadores/Medidores" method="_on_timer_timeout"]
